--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,15 +6,26 @@ body {
     background-size: cover;
 }
 
+pre code {
+    background-color: #eee;
+    border: 1px solid #999;
+    display: block;
+    padding: 20px;
+}
+
+
 .nav, .nav-link{
     background-color: black ;
     color: lightgray;
+}
+.nav-link:hover {
+    color: white;
 }
 .heading {
     margin: auto;
 }
 .blog {
-    background-color: #E1E8EB;
+    background-color: #EEEEEE;
     margin: 2rem auto;
 }
 
@@ -26,12 +37,12 @@ h4, h5, h6 {
 
 }
 
-
 .source{
     text-align: right;
 }
 
 .between-card{
-    margin: 5rem;
+    margin: 0 5rem 0 5rem;
     border-color: white;
 }
+
